Added new solution

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
+02/src/.authorized_key.json
+03/src/.authorized_key.json
+
+02/src/*.tfstate
+02/src/*.tfstate.*
+02/src/*.tfvars
+
+03/src/*.tfstate
+03/src/*.tfstate.*
+03/src/*.tfvars
+
+02/src/.terraform/
+03/src/.terraform/
+
+02/src/.terraform*
+03/src/.terraform*
+
+!.terraformrc
+
+*.tfstate
+*.tfstate.*
+
+personal.auto.tfvars
 .authorized_key.json
-src/*.tfstate
-src/*.tfstate.*
-src/*.tfvars
